@@ -1,0 +1,2 @@
+def foo():
+    """:meta metadata-only-docstring:"""
